<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_demo_playbook"
        android:icon="@drawable/ic_help"
        android:title="@string/demo_playbook_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_unregister_listeners"
        android:title="@string/menu_unregister_listeners"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy_log"
        android:title="@string/menu_copy_log"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share_log"
        android:title="@string/menu_share_log"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_all"
        android:title="@string/menu_clear_all"
        app:showAsAction="never" />

</menu>
